[feat/#142] id 1인 레시피만 추천되는 현상 제거