@@ -431,6 +431,7 @@ public class RecipeService {
         recipeRepository.deleteById(recipeId);
     }
 
+    @Transactional
     public RecipeResponse find(Long recipeId,String uid){
         Recipe recipe = recipeRepository.findById(recipeId).get();
         User user = userRepository.findByUid(uid).get();
@@ -448,13 +449,12 @@ public class RecipeService {
 
         SearchHistory searchHistory = SearchHistory.builder().user(user).recipe(recipe).categoryType(recipe.getCategory()).build();
 
-        if(user.getSearchHistories().size() >= 5){
-            SearchHistory history = user.getSearchHistories().removeFirst();
+        if(user.getSearchHistories().size() >= 3){
+            SearchHistory history = user.getSearchHistories().remove(0);
             recipe.getSearchHistories().remove(history);
         }
         user.getSearchHistories().add(searchHistory);
         recipe.getSearchHistories().add(searchHistory);
-
 
         return new RecipeResponse(recipe,recipeLike,likeSize,recipeBookMark,bookMarkSize,urls);
     }
